<?xml version="1.0"?>
<package>
    <name>at_tests_sim</name>
    <version>0.0.0</version>
    <description>
        The at_tests_sim package. This package is a collection of tests (launch files) integrating different cargo-ants ros nodes, acting with the simulated at environment. 
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <maintainer email="acoromin@iri.upc.edu">Andreu Corominas Murtra</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>TODO</license>

    <!-- Dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>    
    <build_depend>at_description</build_depend>
    <build_depend>at_gazebo</build_depend>
    <build_depend>at_control</build_depend>
    <build_depend>at_drive_sim</build_depend>

    <!-- Use run_depend for packages you need at runtime: -->
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>    
    <run_depend>at_description</run_depend>
    <run_depend>at_gazebo</run_depend>
    <run_depend>at_control</run_depend>
    <run_depend>at_drive_sim</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
    
</package>  
