<?xml version="1.0"?>
<package>
  <name>g_path_planner</name>
  <version>0.0.0</version>
  <description>Global Planner</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>  
  <build_depend>nav_msgs</build_depend>  
  <build_depend>sensor_msgs</build_depend>    
  <build_depend>tf</build_depend>
  <build_depend>cargo_ants_msgs</build_depend> 
  
  <run_depend>nav_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cargo_ants_msgs</run_depend>
  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
	<nav_core plugin="${prefix}/relaxed_astar_planner_plugin.xml"/>

  </export>
 

</package>
