<?xml version="1.0"?>
<package>
  <name>path_adaptor</name>
  <version>0.0.0</version>
  <description>tests with a path adaptor for AGV</description>
  <maintainer email="rafael.valencia@hh.se">Rafael Valencia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
 <build_depend>cargo_ants_msgs</build_depend> 
  <run_depend>cargo_ants_msgs</run_depend>
</package>
